--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=escola
 
 server.port=8080
 #datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/school
-spring.datasource.username=postgres
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:postgresql://localhost:5432/school
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
 
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 #JPA
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
